# Application

./: README.md  docker-compose.yml  load-env.sh  server.py
.github/workflows/: dart.yml
backend/: Cargo.toml  Dockerfile
backend/src/: main.rs
backend/test-server/: script.sh
backend/test-server/.dart_tool/: package_config.json
frontend/: pubspec.yaml
frontend/ios/Runner/: Info.plist
frontend/lib/: connecting.dart  data_reading.dart  data_state_display.dart  demo_page.dart  live_page.dart  main.dart  output_screen.dart  plotted_data.dart  stroop_app.dart  test_page.dart
frontend/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
frontend/stroop/android/app/src/main/: AndroidManifest.xml
frontend/stroop/ios/Runner.xcodeproj/: project.pbxproj
frontend/stroop/lib/: main.dart
frontend/stroop/linux/: CMakeLists.txt
frontend/stroop/linux/runner/: my_application.cc
frontend/stroop/macos/Runner.xcodeproj/: project.pbxproj
frontend/stroop/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
frontend/stroop/macos/Runner/Configs/: AppInfo.xcconfig
frontend/stroop/windows/runner/: main.cpp
frontend/test/: widget_test.dart
frontend/web/: index.html
nginx/: Dockerfile  nginx.conf
stroop/: README.md  pubspec.yaml
stroop/android/app/: build.gradle
stroop/assets/: credential.json
stroop/lib/: main.dart  stroopApp.dart
stroop/macos/Runner.xcodeproj/: project.pbxproj
stroop/test/: widget_test.dart
stroop/web/: index.html
stroop/windows/: CMakeLists.txt
stroop/windows/runner/: Runner.rc
(+1 files in other folders)
